<resources>
    <string name="app_name">SlightTravellerApp</string>
    <string name="nav_menu_first">Home</string>
    <string name="nav_menu_second">QHU-GPT</string>
    <string name="nav_menu_third">Dashboard</string>
    <string name="find_more">Explore More</string>
    <string name="avatar">Avatar</string>
    <string name="experiences">Experiences</string>
    <string name="adventures">Adventures</string>
    <string name="activities">Activities</string>
    <string name="search_hint">Feel Free to Search</string>
    <string name="user_avatar">User Avatar</string>
    <string name="user_name">nomodeset</string>
    <string name="user_id">UID: 3390270462</string>
    <string name="arrow">Arrow</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="chat_with_qhu_gpt">Chat With QHU-GPT</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="message_demo">Hello, this is a message.</string>
    <string name="null_name">Null</string>
    <string name="great_wall">The Great Wall</string>
    <string name="salt_lake">The Salt Lake</string>
    <string name="sharp_mountains">The Sharp Mountains</string>
    <string name="magnificent_waterfall">The Magnificent Waterfall</string>
</resources>