<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_layout"
    >

    <TextView
        android:id="@+id/home_title"
        android:layout_width="264dp"
        android:layout_height="38dp"
        android:lineSpacingExtra="4sp"
        android:gravity="top"
        android:textStyle="bold"
        android:text="@string/find_more"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginTop="78sp"
        android:layout_marginStart="28sp"
        />

    <HorizontalScrollView
        android:id="@+id/home_tabs_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_title"
        android:layout_marginTop="36sp"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:padding="10sp"
            >

            <Space
                android:layout_width="20sp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/home_tabs_menu_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/experiences"
                android:textAlignment="center"
                android:textColor="@color/home_tabs_selected"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="50sp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/home_tabs_menu_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adventures"
                android:textAlignment="center"
                android:textColor="@color/home_tabs_original"
                android:textSize="20sp" />

            <Space
                android:layout_width="50sp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/home_tabs_menu_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activities"
                android:textAlignment="center"
                android:textColor="@color/home_tabs_original"
                android:textSize="20sp" />

            <Space
                android:layout_width="20sp"
                android:layout_height="match_parent"
                />

        </LinearLayout>

    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home_tabs_menu" />

</RelativeLayout>