<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dashboard_layout"
    android:divider="@drawable/line"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/user_board"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="160sp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/user_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_marginTop="24sp"
            android:layout_marginStart="28sp"
            android:layout_centerVertical="true"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avatar"
                android:contentDescription="@string/user_avatar"
                />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="170sp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/user_avatar"
            android:layout_marginStart="28sp"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="28sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/user_id"
                android:textSize="16sp"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:src="@drawable/menu_arrow"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/arrow"
            android:layout_marginEnd="40sp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            >

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="28sp"
                android:layout_height="28sp"
                android:src="@drawable/settings"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/arrow"
                android:layout_marginStart="30sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_toEndOf="@id/settings_icon"
                android:textSize="23sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="40sp"
                />

            <ImageView
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:src="@drawable/menu_arrow"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/arrow"
                android:layout_marginEnd="40sp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            >

            <ImageView
                android:id="@+id/info_icon"
                android:layout_width="28sp"
                android:layout_height="28sp"
                android:src="@drawable/info_circle"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/arrow"
                android:layout_marginStart="30sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:layout_toEndOf="@id/info_icon"
                android:textSize="23sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="40sp"
                />

            <ImageView
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:src="@drawable/menu_arrow"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/arrow"
                android:layout_marginEnd="40sp"
                />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>